packages/vuetify/src/components/VAlert/VAlert.sass
// Imports
@import '../../styles/styles.sass'
@import './_variables.scss'
@import './_mixins.sass'

// Theme
.v-alert.theme--light
  @include alert-theme($material-light)
.v-alert.theme--dark
  @include alert-theme($material-dark)

// Block
.v-alert
  display: flex
  font-size: 16px
  margin-bottom: 16px
  padding: 16px

  > .v-icon,
  > .v-alert__content
    margin-right: 16px

  > .v-icon + .v-alert__content
    margin-right: 0

  > .v-alert__content + .v-icon
    margin-right: 0

  +rtl()
    > .v-icon,
    > .v-alert__content
      margin-right: 0
      margin-left: 16px

    > .v-icon + .v-alert__content
      margin-left: 0

    > .v-alert__content + .v-icon
      margin-left: 0

// Elements
.v-alert__border
  border-style: solid
  border-width: $alert-border-width
  content: ''
  position: absolute

  &:not(.v-alert__border--has-color)
    opacity: 0.26

  &--left,
  &--right
    bottom: 0
    top: 0

  &--bottom,
  &--top
    left: 0
    right: 0

  &--bottom
    border-bottom-left-radius: inherit
    border-bottom-right-radius: inherit
    bottom: 0

  &--left
    border-top-left-radius: inherit
    border-bottom-left-radius: inherit
    left: 0

  &--right
    border-top-right-radius: inherit
    border-bottom-right-radius: inherit
    right: 0

  &--top
    border-top-left-radius: inherit
    border-top-right-radius: inherit
    top: 0

  +rtl()
    &--left
      border-top-left-radius: 0
      border-bottom-left-radius: 0
      border-top-right-radius: inherit
      border-bottom-right-radius: inherit
      left: auto
      right: 0

    &--right
      border-top-left-radius: inherit
      border-bottom-left-radius: inherit
      border-top-right-radius: 0
      border-bottom-right-radius: 0
      left: 0
      right: auto

.v-alert__content
  flex: 1 1 auto

.v-alert__icon
  border-radius: 50%
  height: 24px
  min-width: 24px
  position: relative

  &.v-icon
    font-size: 24px

// Modifiers
.v-alert--border
  @each $direction in ['top', 'right', 'bottom', 'left']
    &-#{$direction}
      padding-#{$direction}: 24px

.v-alert--dense
  padding-top: 8px
  padding-bottom: 8px

.v-alert--outline
  background: transparent !important
  border: 2px solid currentColor !important

  .v-alert__icon
    color: inherit !important

.v-alert--prominent
  align-items: center

  .v-alert__icon
    height: 48px
    min-width: 48px

    &:after
      background: currentColor !important
      border-radius: 50%
      bottom: 0
      content: ''
      left: 0
      opacity: 0.16
      position: absolute
      right: 0
      top: 0

    &.v-icon
      font-size: 32px

